<resources>
    <string name="app_name">AttendanceTracking - CiTeSoft</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Perfil</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_button_text">Comenzar</string>
    <string name="stop_button_text">Parar</string>
    <string name="location_access_needed">Esta aplicación necesita acceso a la localización</string>
    <string name="grant_location_access">Por favor conceda permisos de localización para que la aplicación pueda detectar beacons</string>
    <string name="not_support_bluetooth_msg">Este dispositivo no soporta bluetooth, no es posible buscar beacons</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="location_disabled">Localización en modo alta precisión no activado</string>
    <string name="location_settings">Abrir ajustes de localización</string>
    <string name="location_not_granted">Ya que el permiso de localización no ha sido concedido.</string>
    <string name="cannot_discover_beacons">esta aplicación no podrá buscar beacons</string>
    <string name="funcionality_limited">Funcionalidad limitada</string>
    <string name="no_bluetooth_msg">Con el bluetooth desactivado no es posible buscar beacons</string>
    <string name="start_looking_for_beacons">Empezando a buscar beacons</string>
    <string name="stop_looking_for_beacons">Parando la búsqueda de beacons</string>
    <string name="no_beacons_detected">No se han encontrado beacons</string>
    <string name="beacon_detected">Oferta número %1$s detectada!!</string>
    <string name="Beacon_UID">Beacon UID</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="password_char">*</string>
    <string name="no_internet_conection">No Internet Conection</string>
    <string name="bad_user">Wrong Username or Password</string>
    <string name="DNI">D.N.I.</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="save_sucessfully">Data\'s been saved successfully</string>
    <string name="error_localization">Excepción al obtener información de localización</string>
    <string name="error_stop_beacon">Error Stopping Detections</string>
    <string name="attendance_confirmation">Would do you want to enter in this ClassRoom</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entry_hour">Entry Hour</string>
    <string name="exit_hour">Exit Hour</string>
    <string name="date">Date</string>
    <string name="classroom">Classroom</string>
    <string name="open">Open</string>
    <string name="open_Session">Open Session</string>
    <string name="notification_message">8 hours have passed. Would do you like close your session?</string>
    <string name="close">Close</string>
    <string name="attendance_closed">Attendance Closed</string>
    <string name="logout">Log Out</string>
    <string name="searching_beacons">Searching Beacons</string>
</resources>
